<resources>
    <string name="app_name">Pill Remind</string>
    <string name="icon_drug">Icon Drug</string>
    <string name="email_icon">email icon</string>
    <string name="email">Email</string>
    <string name="password_icon">password icon</string>
    <string name="forgot_password">QUÊN MẬT KHẨU?</string>
    <string name="sign_in">ĐĂNG NHẬP</string>
    <string name="no_account">CHƯA CÓ TÀI KHOẢN?</string>
    <string name="sign_up">ĐĂNG KÝ</string>
    <string name="password">Mật khẩu</string>
    <string name="repeat_password">Nhập lại mật khẩu</string>
    <string name="fullname">Họ và tên</string>
    <string name="full_name_icon">full name icon</string>
    <string name="go_back">go back</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="phone_icon">phone icon</string>
    <string name="birthday">Chọn ngày sinh</string>
    <string name="birthday_icon">birthday icon</string>
    <string name="reset_password_icon">reset password icon</string>
    <string name="reset">KHÔI PHỤC</string>
    <string name="reset_password">KHÔI PHỤC MẬT KHẨU</string>
    <string name="homepage">Trang chủ</string>
    <string name="meds">Đơn thuốc</string>
    <string name="pill_schedule">Lịch uống thuốc</string>
    <string name="profile">Tài khoản</string>
    <string name="api_maps">AIzaSyBEPUWHDmrlEyimyDeVOGOZmiqt_W7ePOQ</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="or">HOẶC</string>
    <string name="facebook_icon">Facebook icon</string>
    <string name="google_icon">google icon</string>
    <string name="apple_icon">apple icon</string>
    <string name="back_icon">back icon</string>
    <string name="setting_profile">HỒ SƠ</string>
    <string name="user_avatar">User avatar</string>
    <string name="edit_profile">Chỉnh sửa hồ sơ</string>
    <string name="Notifications">Thông báo</string>
    <string name="verify_phone_number">Verify Phone Number</string>
    <string name="sign_out">Đăng xuất</string>
    <string name="verify_phonenumber">Xác thực số điện thoại</string>
    <string name="change_password">Thay đổi mật khẩu</string>
    <string name="share_my_profile">Chia sẻ hồ sơ của tôi</string>
    <string name="about_us">Về chúng tôi</string>
    <string name="faq">Các câu hỏi thường gặp</string>
    <string name="contact_us">Liên hệ với chúng tôi</string>
    <string name="delete_account">Xoá tài khoản</string>
    <string name="version">Phiên bản hiện tại: v1.0.00</string>
    <string name="two_fa">Xác thực 2 bước</string>
    <string name="link_social">Liên kết tài khoản mạng xã hội</string>
    <string name="family">Gia đình</string>
    <string name="policy_privacy">Thông tin pháp lý</string>
    <string name="accept">Đồng ý</string>
    <string name="term">Điều khoản sử dụng</string>
    <string name="offline_mode">Chế độ ngoại tuyến</string>
    <string name="dark_mode">Giao diện ban đêm</string>
    <string name="hello">Xin chào</string>
    <string name="noData">Không có dữ liệu để hiển thị</string>
    <string name="pill_dialy">Pill Dialy</string>
    <string name="add_pill">add pill</string>
    <string name="next">next</string>
    <string name="previous">previous</string>
    <string name="pill_maker">Thêm lịch uống thuốc</string>
    <string name="pill_name_add">Nhập tên thuốc</string>
    <string name="pill_name">Tên thuốc</string>
    <string name="ocr_icon">ocr icon</string>
    <string name="add_image">Thêm ảnh</string>
    <string name="strength">Số lượng</string>
    <string name="strength_add">Nhập số lượng</string>
    <string name="unit">Chọn đơn vị</string>
    <string name="frequency">Tần suất</string>
    <string name="choose_frecency">Chọn tần suất sử dụng</string>
    <string name="warming_reminder">Lưu ý: Nếu bạn chọn \'khi cần thiết\' thì bạn sẽ không nhận được thông báo nhắc nhở</string>
    <string name="often">Nhập khoảng thời gian trong ngày</string>
    <string name="how_often">Bao lâu?</string>
    <string name="which_day">Ngày nào?</string>
    <string name="how_times">Mấy lần mỗi ngày?</string>
    <string name="how_times_des">Nhập số lần uống mỗi ngày</string>
    <string name="create_schedule">Tạo lịch</string>
    <string name="decripstion">Mô tả thuốc</string>
    <string name="time_and_dose">Cài đặt thời gian và liều lượng</string>
    <string name="choose_day">Lựa chọn ngày</string>
    <string name="_1">1</string>
    <string name="pill_image">pill image</string>
    <string name="no_pill">Hôm nay bạn không có lịch uống thuốc</string>
    <string name="thoi_diem_uong">Thời điểm uống</string>
    <string name="chon_thoi_diem">Chọn thời điểm uống</string>
    <string name="chon_thoi_gian">Chọn thời gian</string>
    <string name="chon_so_luong">Chọn số lượng</string>
    <string name="Monday">Thứ hai</string>
    <string name="Tuesday">Thứ ba</string>
    <string name="Wednesday">Thứ tư</string>
    <string name="Thursday">Thứ năm</string>
    <string name="Friday">Thứ sáu</string>
    <string name="Saturday">Thứ bảy</string>
    <string name="Sunday">Chủ nhật</string>
    <string name="today_pill">Lời nhắc uống thuốc hôm nay</string>
    <string name="duration">Thời hạn</string>
    <string name="startDay">Chọn ngày bắt đầu</string>
    <string name="endDay">Chọn ngày kết thúc</string>
    <string name="call_emergency">Cấp cứu</string>
    <string name="drug_store">Nhà thuốc</string>
    <string name="hospital">Bệnh viện</string>
    <string name="charity">Từ thiện</string>
    <string name="title_activity_drug_store">DrugStoreActivity</string>
    <string name="refresh">refresh</string>
    <string name="delete">Xoá</string>
    <string name="edit_pill">Chỉnh sửa lịch uống thuốc</string>
    <string name="pill_update">Cập nhật</string>
    <string name="title_activity_hospital">HospitalActivity</string>
    <string name="change_passoword">ĐÔI MẬT KHẨU</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="repeat_new_passwiord">Nhâp lại mật khẩu mới</string>
</resources>
