<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/foam"
    tools:context=".view.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_bg">

            <ImageView
                android:layout_width="77dp"
                android:layout_height="77dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:contentDescription="@string/icon_drug"
                android:src="@drawable/drugs_ic" />
        </FrameLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="37dp"
            android:layout_marginRight="62dp"
            android:background="@drawable/blue_border_rounded_cornwe">

            <EditText
                android:id="@+id/edtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:layout_toEndOf="@+id/email_icon"
                android:autofillHints=""
                android:background="@null"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="0dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                tools:ignore="TouchTargetSizeCheck" />

            <requestFocus />

            <ImageView
                android:id="@+id/email_icon"
                android:layout_width="14dp"
                android:layout_height="10dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="17dp"
                android:contentDescription="@string/email_icon"
                android:src="@drawable/email_ic"
                tools:ignore="ImageContrastCheck" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="37dp"
            android:layout_marginRight="62dp"
            android:background="@drawable/blue_border_rounded_cornwe">

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:layout_toEndOf="@+id/password_icon"
                android:autofillHints=""
                android:background="@color/white"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="0dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                tools:ignore="TouchTargetSizeCheck" />

            <ImageView
                android:id="@+id/password_icon"
                android:layout_width="14dp"
                android:layout_height="10dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="17dp"
                android:contentDescription="@string/password_icon"
                android:src="@drawable/password_ic" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textColor="@color/robin_egg_blue"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="62dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/blue_fill_rounded_color"
                android:gravity="center"
                android:text="@string/sign_in"
                android:textSize="15sp"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvWarming"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="14dp"
            android:layout_marginRight="62dp"
            android:gravity="center"
            android:textColor="@color/punch" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/no_account" />

            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="5dp"
                android:text="@string/sign_up"
                android:textColor="@color/robin_egg_blue" />
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="170dp"
        android:text="@string/or"
        android:textSize="20sp"/>
    <LinearLayout
        android:id="@+id/llSocialLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="62dp"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="62dp"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/btnLoginWithFacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/facebook_icon"
            android:gravity="center"
            android:src="@drawable/facebook_ic"
            tools:ignore="ButtonStyle,TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/btnLoginWithGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:background="@null"
            android:contentDescription="@string/google_icon"
            android:gravity="center"
            android:src="@drawable/google_ic"
            tools:ignore="ButtonStyle,TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/btnLoginWithApple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:background="@null"
            android:contentDescription="@string/apple_icon"
            android:gravity="center"
            android:src="@drawable/apple_ic"
            tools:ignore="ButtonStyle,TouchTargetSizeCheck" />
    </LinearLayout>
</RelativeLayout>