<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/foam"
    tools:context=".view.LoginActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/blue_bg">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@null"
            android:contentDescription="@string/go_back"
            android:src="@drawable/back_ic" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:contentDescription="@string/reset_password_icon"
            android:src="@drawable/reset_password_ic" />
    </FrameLayout>

    <TextView
        android:layout_marginTop="150dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/reset_password"
        android:textSize="30sp"
        android:textColor="@color/robin_egg_blue"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="62dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="62dp"
        android:background="@drawable/blue_border_rounded_cornwe">

        <EditText
            android:id="@+id/edtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:layout_toEndOf="@+id/email_icon"
            android:autofillHints=""
            android:background="@null"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="0dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            tools:ignore="TouchTargetSizeCheck" />

        <requestFocus />

        <ImageView
            android:id="@+id/email_icon"
            android:layout_width="14dp"
            android:layout_height="10dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="17dp"
            android:contentDescription="@string/email_icon"
            android:src="@drawable/email_ic" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="62dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="62dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnResetPassword"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/blue_fill_rounded_color"
            android:gravity="center"
            android:text="@string/reset"
            android:textSize="15sp"
            tools:ignore="ButtonStyle,DuplicateSpeakableTextCheck" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvWarming"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textColor="@color/punch" />
</LinearLayout>