<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/foam"
    tools:context=".view.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_bg">

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@null"
                android:contentDescription="@string/go_back"
                android:src="@drawable/back_ic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:text="@string/change_passoword"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </FrameLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="62dp"
            android:background="@drawable/blue_border_rounded_cornwe">

            <EditText
                android:id="@+id/edtOldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:layout_toEndOf="@+id/password_oldicon"
                android:autofillHints=""
                android:background="@null"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="0dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                tools:ignore="TouchTargetSizeCheck" />

            <ImageView
                android:id="@+id/password_oldicon"
                android:layout_width="14dp"
                android:layout_height="10dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="17dp"
                android:contentDescription="@string/password_icon"
                android:src="@drawable/password_ic" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="62dp"
            android:background="@drawable/blue_border_rounded_cornwe">

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:layout_toEndOf="@+id/password_icon"
                android:autofillHints=""
                android:background="@null"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:padding="0dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                tools:ignore="TouchTargetSizeCheck" />

            <ImageView
                android:id="@+id/password_icon"
                android:layout_width="14dp"
                android:layout_height="10dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="17dp"
                android:contentDescription="@string/password_icon"
                android:src="@drawable/password_ic" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="62dp"
            android:background="@drawable/blue_border_rounded_cornwe">

            <EditText
                android:id="@+id/edtPasswordRepeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:layout_toEndOf="@+id/password_repeat"
                android:autofillHints=""
                android:background="@null"
                android:hint="@string/repeat_new_passwiord"
                android:inputType="textPassword"
                android:padding="0dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                tools:ignore="TouchTargetSizeCheck" />

            <ImageView
                android:id="@+id/password_repeat"
                android:layout_width="14dp"
                android:layout_height="10dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="17dp"
                android:contentDescription="@string/password_icon"
                android:src="@drawable/password_ic" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="62dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnChangePassword"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/blue_fill_rounded_color"
                android:gravity="center"
                android:text="@string/change_password"
                android:textSize="15sp"
                tools:ignore="ButtonStyle,DuplicateSpeakableTextCheck" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvWarming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/punch" />
    </LinearLayout>
</RelativeLayout>